# zoenApp

./: .gitignore  Cargo.toml
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release-app.yml
.pi/skills/release/: SKILL.md
apps/admin-dashboard/: README.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
apps/admin-dashboard/app/: globals.css  layout.tsx  page.tsx
apps/admin-dashboard/lib/: api.ts  utils.ts
apps/screenpipe-app-tauri/components/: update-banner.tsx  update-notification.tsx  updater.tsx
apps/screenpipe-app-tauri/src-tauri/: tauri.beta.conf.json  tauri.prod.conf.json
crates/screenpipe-core/: Cargo.toml
crates/screenpipe-core/src/: action_items.rs  action_items_playbook.rs  lib.rs  pipes.rs  playbook_engine.rs  playbook_engine_tests.rs
crates/screenpipe-db/: Cargo.toml
crates/screenpipe-db/src/: audit.rs  db.rs  lib.rs  tenant.rs  tenant_db.rs  types.rs
crates/screenpipe-db/tests/: tenant_test.rs
crates/screenpipe-server/: Cargo.toml
crates/screenpipe-server/src/: audit.rs  auth.rs  lib.rs  playbook_manager.rs  security.rs  server.rs  sync_api.rs  (+3 more)
crates/screenpipe-test-utils/: Cargo.toml
crates/screenpipe-test-utils/fixtures/audio/: sine_440hz_5s.raw  speech_sample.raw
crates/screenpipe-test-utils/src/: lib.rs
crates/screenpipe-test-utils/src/fixtures/: audio_samples.rs  mod.rs  video_frames.rs
crates/screenpipe-test-utils/src/mocks/: audio.rs  mod.rs  pipe.rs  screen.rs  video.rs
docs/: AUTH.md  CI_OPTIMIZATION.md  RELEASE.md
scripts/: generate-update-manifest.js
(+39 files in other folders)
